--- a/index.html
+++ b/index.html
@@ -1,102 +1,90 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <title></title>
   <title>Portfolio | {Justin Thrift}</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <!-- Material Design Lite -->
-   <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.indigo-blue.min.css" />
-   <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
-   <!-- Font Awesome -->
-   <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
-
-   <!--Custom styles -->
-   <link rel="stylesheet" href="styles/main.css">
-</head>
-  <body>
-<header>
   <header class="mdl-layout__header mdl-layout__header--transparent">
-  <h1>Justin Thrift</h1>
-  <p class="slogan">UX Designer based in Brooklyn</p>
-</header>
-<main>
+      <meta name="viewport" content="width=device-width, initial-scale=1">
+      <!-- Material Design Lite -->
+      <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.indigo-blue.min.css" />
+      <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
+      <!-- Font Awesome -->
+      <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
+      <!--Custom styles -->
+      <link rel="stylesheet" href="styles/main.css">
+      <h1>Justin Thrift</h1>
+      <p class="slogan">UX Designer based in Brooklyn</p>
+  </header>
+
+<body>
   <main class="mdl-layout__content mdl-grid">
-
-
       <div class="project featured-project mdl-grid mdl-cell mdl-cell--12-col mdl-cell--4-col-tablet mdl-card mdl-shadow--4dp">
-               <div class="mdl-cell mdl-cell--5-col mdl-cell--12-col-tablet">
-                   <img src="http://lorempixel.com/350/260/abstract/placeholder-1" alt="project screenshot"/>
-                 </div>
-                 <div class="mdl-cell mdl-cell--7-col">
-                   <h2 class="mdl-card__title-text">Featured Project Name</h2>
-                   <p class="project-description mdl-card__supporting-text">Project description text</p>
-                 </div>
-               </div>
-
+      <div class="mdl-cell mdl-cell--5-col mdl-cell--12-col-tablet">
+        <img src="http://lorempixel.com/350/260/abstract/placeholder-1" alt="project screenshot"/>
+      </div>
+      <div class="mdl-cell mdl-cell--7-col">
+        <h2 class="mdl-card__title-text">Featured Project Name</h2>
+        <p class="project-description mdl-card__supporting-text">Project description text</p>
+      </div>
+      <div class="project mdl-cell mdl-card mdl-shadow--4dp">
+        <div>
+        <img src="http://lorempixel.com/350/260/abstract/placeholder-2" alt="project screenshot"/>
+        </div>
+      <div class="mdl-card__title">
+        <h2 class="mdl-card__title-text">Project Name</h2>
+      </div>
+      <div class="mdl-card__supporting-text">Project description text</div>
+      </div>
 
       <div class="project mdl-cell mdl-card mdl-shadow--4dp">
-               <div>
-                <img src="http://lorempixel.com/350/260/abstract/placeholder-2" alt="project screenshot"/>
-                </div>
-                <div class="mdl-card__title">
-                  <h2 class="mdl-card__title-text">Project Name</h2>
-                </div>
-                <div class="mdl-card__supporting-text">Project description text</div>
-              </div>
+        <div>
+        <img src="http://lorempixel.com/350/260/abstract/placeholder-3" alt="project screenshot"/>
+      </div>
+      <div class="mdl-card__title">
+        <h2 class="mdl-card__title-text">Project Name</h2>
+      </div>
+      <div class="mdl-card__supporting-text">Project description text</div>
+      </div>
 
-              <div class="project mdl-cell mdl-card mdl-shadow--4dp">
-              <div>
-                  <img src="http://lorempixel.com/350/260/abstract/placeholder-3" alt="project screenshot"/>
-                </div>
-                <div class="mdl-card__title">
-                  <h2 class="mdl-card__title-text">Project Name</h2>
-                </div>
-                <div class="mdl-card__supporting-text">Project description text</div>
-              </div>
-
-              <div class="project mdl-cell mdl-card mdl-shadow--4dp">
-                <div>
-                  <img src="http://lorempixel.com/350/260/abstract/placeholder-4" alt="project screenshot"/>
-                </div>
-                <div class="mdl-card__title">
-                  <h2 class="mdl-card__title-text">Project Name</h2>
-                </div>
-                <div class="mdl-card__supporting-text">Project description text</div>
-              </div>
-
-      <footer>
-      <ul>
-        <footer class="mdl-mini-footer">
-        <ul class="mdl-mini-footer__link-list">
-        <li> <a href="https://www.linkedin.com/in/justinthrift/">LinkedIn</a> </li>
-        <li> <a href="https://github.com/jthrift1089">GitHub</a> </li>
-        <li> <a href="https://twitter.com/justinthrift">Twitter</a> </li>
-        <li> <a href="mailto:justinbthrift@gmail.com">Email</a> </li>
-
-        <li>
-                 <a href="{https://www.linkedin.com/in/justinthrift/}">
-                    <i class="fa fa-linkedin-square" aria-hidden="true"></i>
-                  </a>
-                </li>
-                <li>
-                  <a href="{https://github.com/jthrift1089}">
-                    <i class="fa fa-github-square" aria-hidden="true"></i>
-                  </a>
-                </li>
-                <li>
-                  <a href="{https://twitter.com/justinthrift}">
-                    <i class="fa fa-twitter-square" aria-hidden="true"></i>
-                  </a>
-                </li>
-                <li>
-                  <a href="mailto:{justinbthrift@gmail.com}">
-                    <i class="fa fa-envelope-square" aria-hidden="true"></i>
-                </a>
-                </li>
+      <div class="project mdl-cell mdl-card mdl-shadow--4dp">
+        <div>
+          <img src="http://lorempixel.com/350/260/abstract/placeholder-4" alt="project screenshot"/>
+        </div>
+      <div class="mdl-card__title">
+        <h2 class="mdl-card__title-text">Project Name</h2>
+      </div>
+      <div class="mdl-card__supporting-text">Project description text</div>
+      </div>
 
 
-      </ul>
-    </footer>
-   </main>
+  <footer class="mdl-mini-footer">
+    <ul class="mdl-mini-footer__link-list">
+      <li> <a href="https://www.linkedin.com/in/justinthrift/">LinkedIn</a> </li>
+      <li> <a href="https://github.com/jthrift1089">GitHub</a> </li>
+      <li> <a href="https://twitter.com/justinthrift">Twitter</a> </li>
+      <li> <a href="mailto:justinbthrift@gmail.com">Email</a> </li>
+      <li>
+        <a href="https://www.linkedin.com/in/justinthrift/">
+          <i class="fa fa-linkedin-square" aria-hidden="true"></i>
+        </a>
+          </li>
+          <li>
+        <a href="https://github.com/jthrift1089">
+          <i class="fa fa-github-square" aria-hidden="true"></i>
+        </a>
+          </li>
+          <li>
+        <a href="https://twitter.com/justinthrift">
+          <i class="fa fa-twitter-square" aria-hidden="true"></i>
+        </a>
+          </li>
+          <li>
+        <a href="mailto:justinbthrift@gmail.com">
+          <i class="fa fa-envelope-square" aria-hidden="true"></i>
+        </a>
+      </li>
+
+
+    </ul>
+  </footer>
+  </main>
 </body>
 </html>
