--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
         <h2 class="mdl-card__title-text">Featured Project Name</h2>
         <p class="project-description mdl-card__supporting-text">Project description text</p>
       </div>
+    </div>
       <div class="project mdl-cell mdl-card mdl-shadow--4dp">
         <div>
         <img src="http://lorempixel.com/350/260/abstract/placeholder-2" alt="project screenshot"/>
@@ -57,10 +58,6 @@
 
   <footer class="mdl-mini-footer">
     <ul class="mdl-mini-footer__link-list">
-      <li> <a href="https://www.linkedin.com/in/justinthrift/">LinkedIn</a> </li>
-      <li> <a href="https://github.com/jthrift1089">GitHub</a> </li>
-      <li> <a href="https://twitter.com/justinthrift">Twitter</a> </li>
-      <li> <a href="mailto:justinbthrift@gmail.com">Email</a> </li>
       <li>
         <a href="https://www.linkedin.com/in/justinthrift/">
           <i class="fa fa-linkedin-square" aria-hidden="true"></i>
