Checkpoint 11 - HTML fixes -

--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
-  <title>Portfolio | {Justin Thrift}</title>
-  <header class="mdl-layout__header mdl-layout__header--transparent">
+  <title>Portfolio | Justin Thrift </title>
+
+  <head>
       <meta name="viewport" content="width=device-width, initial-scale=1">
       <!-- Material Design Lite -->
       <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.indigo-blue.min.css" />
@@ -10,11 +11,20 @@
       <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
       <!--Custom styles -->
       <link rel="stylesheet" href="styles/main.css">
-      <h1>Justin Thrift</h1>
-      <p class="slogan">UX Designer based in Brooklyn</p>
-  </header>
+
+  </head>
 
 <body>
+  <header class="mdl-layout__header mdl-layout__header--transparent">
+    <h1>Justin Thrift</h1>
+    <p class="slogan">UX Designer based in Brooklyn</p>
+  </header>
+
+
+
+
+
+
   <main class="mdl-layout__content mdl-grid">
       <div class="project featured-project mdl-grid mdl-cell mdl-cell--12-col mdl-cell--4-col-tablet mdl-card mdl-shadow--4dp">
       <div class="mdl-cell mdl-cell--5-col mdl-cell--12-col-tablet">
